Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -141,7 +141,7 @@
    "outputs": [],
    "source": [
     "ba_latitude = None\n",
-    "coordinates[0]"
+    "ba_latitude=coordinates[0]\n"
    ]
   },
   {
