--- a/index.ipynb
+++ b/index.ipynb
@@ -162,7 +162,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_longitude = None"
+    "ba_longitude = None\n",
+    "coordinates[1]"
    ]
   },
   {
