Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -377,11 +377,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<folium.map.Marker at 0x7fb5664f7940>]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "buenos_markers = [buenos_marker]"
+    "buenos_markers = [buenos_marker]\n",
+    "buenos_markers"
    ]
   },
   {
