--- a/index.ipynb
+++ b/index.ipynb
@@ -452,7 +452,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker = None\n"
+    "la_boca_marker = None\n",
+    "neighborhood_markers[]"
    ]
   },
   {
