--- a/index.ipynb
+++ b/index.ipynb
@@ -453,7 +453,7 @@
    "outputs": [],
    "source": [
     "la_boca_marker = None\n",
-    "neighborhood_markers[]"
+    "neighborhood_markers[-1]"
    ]
   },
   {
