--- a/index.ipynb
+++ b/index.ipynb
@@ -453,7 +453,7 @@
    "outputs": [],
    "source": [
     "la_boca_marker = None\n",
-    "neighborhood_markers[-1]"
+    "la_boca_marker = neighborhood_markers[-1]\n"
    ]
   },
   {
