--- a/index.ipynb
+++ b/index.ipynb
@@ -448,12 +448,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<folium.map.Marker at 0x7fb566431da0>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "la_boca_marker = None\n",
-    "la_boca_marker = neighborhood_markers[-1]\n"
+    "la_boca_marker = neighborhood_markers[-1]\n",
+    "la_boca_marker"
    ]
   },
   {
