--- a/index.ipynb
+++ b/index.ipynb
@@ -560,7 +560,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recoleta_marker = None"
+    "recoleta_marker = None\n",
+    "neighborhood_markers[1]"
    ]
   },
   {
