Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -561,7 +561,7 @@
    "outputs": [],
    "source": [
     "recoleta_marker = None\n",
-    "neighborhood_markers[1]"
+    "recoleta_marker=neighborhood_markers[1]\n"
    ]
   },
   {
