--- a/index.ipynb
+++ b/index.ipynb
@@ -561,7 +561,8 @@
    "outputs": [],
    "source": [
     "recoleta_marker = None\n",
-    "recoleta_marker=neighborhood_markers[1]\n"
+    "recoleta_marker=neighborhood_markers[1]\n",
+    "recoleta_marker"
    ]
   },
   {
