--- a/index.ipynb
+++ b/index.ipynb
@@ -556,9 +556,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<folium.map.Marker at 0x7fb566431cc0>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "recoleta_marker = None\n",
     "recoleta_marker=neighborhood_markers[1]\n",
